--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-2 [70年前，柏林电影节是这样诞生的](/articles/dw/1042148.md)
+
+6-2 [评论：中国人不太愿意生孩子](/articles/dw/1042149.md)
+
+6-2 [德国一周大小事](/articles/dw/1042150.md)
+
 6-2 [鼓励生、 限制生、 催着生！ 中国生育政策的变迁](/articles/dw/1042151.md)
 
 6-2 [力求不再受制于人！华为发布鸿蒙新系统](/articles/dw/1042152.md)
@@ -594,10 +600,4 @@
 5-16 [北欧: 比特币采矿的天堂？](/articles/dw/1042446.md)
 
 5-16 [疫苗姗姗来迟 西巴尔干国家对欧盟倍感失望](/articles/dw/1042447.md)
-
-5-16 [流产：疫情下被忽视的女性健康问题](/articles/dw/1042448.md)
-
-5-16 [德国军队撤离阿富汗，谁管他们的当地雇员？](/articles/dw/1042449.md)
-
-5-16 [建筑需求大增　中国成德国木材最大市场](/articles/dw/1042450.md)
 
