--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+6-2 [B.1.617.2变异病毒肆虐印度 世卫正名为Delta – 法国国际广播电台 - RFI](/articles/rfi/1028725.md)
+
+6-2 [中国被指&quot;隐蔽&quot;船只涉非法&quot;掠夺&quot;阿根廷水域资源](/articles/rfi/1028726.md)
+
+6-2 [中国称在马来西亚附近军事飞行是&quot;常规训练”](/articles/rfi/1028727.md)
+
+6-2 [布林肯访哥斯大黎加 讨论非法移民问题 – 法国国际广播电台 - RFI](/articles/rfi/1028728.md)
+
+6-2 [COVID-19全球确诊逾1亿7109万例 超过368万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028729.md)
+
+6-2 [赫佐格当选以色列总统 7月就任 – 法国国际广播电台 - RFI](/articles/rfi/1028730.md)
+
+6-2 [广东变种病毒超快超强 全民总动员跟病毒赛跑](/articles/rfi/1028731.md)
+
 6-2 [白夏：唐吉田去日本照料病重的女儿安能威胁国家安全](/articles/rfi/1028732.md)
 
 6-2 [Amazon求快仓库员工常受伤 将变更生产力监督机制 – 法国国际广播电台 - RFI](/articles/rfi/1028733.md)
@@ -586,18 +600,4 @@
 5-28 [迫降民航客机遭众谴 卢卡申科见普京会谈什么？ - 要闻解说](/articles/rfi/1029023.md)
 
 5-28 [中国再促法国努力 解冻中欧投资协定](/articles/rfi/1029024.md)
-
-5-28 [法航飞莫斯科班机又取消 – 法国国际广播电台 - RFI](/articles/rfi/1029025.md)
-
-5-28 [日本东京都等9地 紧急事态宣言延至6月20日 – 法国国际广播电台 - RFI](/articles/rfi/1029026.md)
-
-5-28 [忧变异病毒 南亚6国东奥代表团将预先接种疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1029027.md)
-
-5-28 [不满大麦遭中国关税惩罚 澳洲加紧向WTO申诉 – 法国国际广播电台 - RFI](/articles/rfi/1029028.md)
-
-5-28 [纳米比亚肯定德国  坦承曾犯种族灭绝罪行 – 法国国际广播电台 - RFI](/articles/rfi/1029029.md)
-
-5-28 [黎智英等人承认非法集结 判囚14到18个月 – 法国国际广播电台 - RFI](/articles/rfi/1029030.md)
-
-5-28 [日欧首脑联合声明提及台湾海峡与东海安全 北京抗议](/articles/rfi/1029031.md)
 
