--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-2 [中国16架军机入侵马来西亚领空 马外交部称将召见中国大使](/articles/voa/1040402.md)
+
 6-2 [新一波疫情突袭 中国广东强化应对措施](/articles/voa/1040403.md)
 
 6-2 [澳门警方首次以违法煽颠为由禁办六四烛光集会](/articles/voa/1040404.md)
@@ -598,6 +600,4 @@
 5-19 [台湾宣布全境进入疫情第三级警戒](/articles/voa/1040700.md)
 
 5-19 [以色列指责中国国家电视台“公然反犹”](/articles/voa/1040701.md)
-
-5-19 [习近平铁腕掌控 军队反腐风暴还在刮](/articles/voa/1040702.md)
 
