--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-2 [疫情中台湾离岛搞“自主权” “文化克里米亚化”引关注](/articles/rfa/1045433.md)
+
 6-2 [唐吉田赴日陪护女儿  福州机场出境被拦截](/articles/rfa/1045434.md)
 
 6-2 [习近平重提“说好中国故事”  分析:为洗白疫情责任掌控内宣](/articles/rfa/1045435.md)
@@ -598,6 +600,4 @@
 4-29 [中国的克里米亚在哪里？ 台学者：钓鱼岛](/articles/rfa/1045731.md)
 
 4-29 [继芯片 “大跃进”后   国产电动车 “大跃进”如箭在弦](/articles/rfa/1045732.md)
-
-4-29 [为配合百年党庆宣传    禁完网络论坛再禁脱口秀](/articles/rfa/1045733.md)
 
