--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+6-3 [出版物含“违禁材料”    加拿大知名学者寇谧将的领英中国网页遭封杀](/articles/rfa/1045426.md)
+
+6-3 [香港强推普通话   反送中成颜色革命  年轻人何去何从？](/articles/rfa/1045427.md)
+
+6-3 [反对建复旦大学分校  布达佩斯市长改路名为达赖喇嘛](/articles/rfa/1045428.md)
+
+6-3 [新报告揭露中共影响手法    加国议会一读通过《外国影响注册法》](/articles/rfa/1045429.md)
+
 6-2 [助弱势群体写诉状放上网   维权人士黄晓敏遭刑拘](/articles/rfa/1045430.md)
 
 6-2 [广东确诊激增有小区提升至高风险 村委会被指哄抬物价](/articles/rfa/1045431.md)
@@ -592,12 +600,4 @@
 4-30 [中国设国家疾控局  能避免重蹈新冠疫情的覆辙吗？](/articles/rfa/1045724.md)
 
 4-30 [专制胜民主？拜登欲团结美国向习近平说不](/articles/rfa/1045725.md)
-
-4-30 [中国反制裁    欧洲议会威胁杯葛《欧中投资协定》](/articles/rfa/1045726.md)
-
-4-30 [两加拿大人被拘捕两年多   渥太华仍和中国有商业往来](/articles/rfa/1045727.md)
-
-4-30 [专访高智晟夫人耿和：我一定要找到他，无论生死!](/articles/rfa/1045728.md)
-
-4-29 [美国舰长翘脚看辽宁舰 中国国防部回应“威胁安全”](/articles/rfa/1045729.md)
 
