--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-3 [达赖喇嘛路与自由香港路:布达佩斯市长重新命名拟建复旦大学分校周边街道](/articles/voa/1040391.md)
+
+6-3 [报道：五角大楼审计报告认为可以使用两款中国大疆无人机](/articles/voa/1040392.md)
+
 6-3 [消费疲软，原料暴涨，中国经济险象丛生](/articles/voa/1040393.md)
 
 6-3 [习近平要塑造“可信可爱可敬”的中国形象，战狼外交走到头了？](/articles/voa/1040394.md)
@@ -596,8 +600,4 @@
 5-20 [美国官员：与中俄疫苗外交不同 美将按需要向全球捐赠疫苗](/articles/voa/1040689.md)
 
 5-20 [美国会智库报告：中国未遵守防核扩散承诺](/articles/voa/1040690.md)
-
-5-20 [白宫要义：拜登告诉美军： 捍卫包括南中国海等水域自由航行攸关美国利益](/articles/voa/1040691.md)
-
-5-20 [拜登：美必须捍卫北极和南中国海的海上航道](/articles/voa/1040692.md)
 
