--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-3 [美国谴责香港当局试图抹去天安门屠杀历史](/articles/voa/1040385.md)
+
+6-3 [拜登呼吁通过新冠疫苗接种实现国家团结](/articles/voa/1040386.md)
+
+6-3 [特朗普关闭博客 其网络平台几乎全部消失](/articles/voa/1040387.md)
+
+6-3 [以色列政界人士组成脆弱联盟以取代内塔尼亚胡政府](/articles/voa/1040388.md)
+
+6-3 [完成撤军期限将至 美国培训阿富汗政府军的使命能否维持前景不明](/articles/voa/1040389.md)
+
 6-3 [白宫：拜登将与普京讨论对JBS肉食加工厂的网络攻击行为](/articles/voa/1040390.md)
 
 6-3 [达赖喇嘛路与自由香港路:布达佩斯市长重新命名拟建复旦大学分校周边街道](/articles/voa/1040391.md)
@@ -590,14 +600,4 @@
 5-20 [拜登表示美海警队将发挥更大作用 公开警告中俄 赞扬与台湾合作](/articles/voa/1040683.md)
 
 5-20 [红色现象引人注目，文革是否会卷土重来？](/articles/voa/1040684.md)
-
-5-20 [专访NASA华裔科学家：美国航天事业强大的原因何在](/articles/voa/1040685.md)
-
-5-20 [美海军陆战队司令：美中战争并非不可避免 前沿部署陆战队以遏阻中国](/articles/voa/1040686.md)
-
-5-20 [美众议院表决批准建立调查冲击国会事件的委员会](/articles/voa/1040687.md)
-
-5-20 [内塔尼亚胡拒绝接受拜登发出的缓和加沙局势呼吁](/articles/voa/1040688.md)
-
-5-20 [美国官员：与中俄疫苗外交不同 美将按需要向全球捐赠疫苗](/articles/voa/1040689.md)
 
