--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-3 [美中经贸高官一周两度通话 美副国务卿：继续评估前政府对华贸易政策](/articles/voa/1040383.md)
+
+6-3 [白宫要义: 拜登力推国庆节前70%人口至少一剂接种](/articles/voa/1040384.md)
+
 6-3 [美国谴责香港当局试图抹去天安门屠杀历史](/articles/voa/1040385.md)
 
 6-3 [拜登呼吁通过新冠疫苗接种实现国家团结](/articles/voa/1040386.md)
@@ -596,8 +600,4 @@
 5-20 [美军舰驶入“西沙群岛领海”展示航行自由 中国指责美国搞霸权](/articles/voa/1040681.md)
 
 5-20 [拜登寻求巴以停火 共和党人担心美国暂停军援向以色列施压](/articles/voa/1040682.md)
-
-5-20 [拜登表示美海警队将发挥更大作用 公开警告中俄 赞扬与台湾合作](/articles/voa/1040683.md)
-
-5-20 [红色现象引人注目，文革是否会卷土重来？](/articles/voa/1040684.md)
 
