--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-3 [每周时事分析：从德国领导人一再被美国监听看欧洲的“战略自主”](/articles/ft/1045525.md)
+
 6-3 [如何理解中国产业政策](/articles/ft/1045526.md)
 
 6-3 [周期之殇与政策之困](/articles/ft/1045527.md)
@@ -598,6 +600,4 @@
 3-30 [沃尔沃将为全公司新生儿父母均提供完整产假](/articles/ft/1045823.md)
 
 3-30 [拜登政府为美国海上风电开发设定目标](/articles/ft/1045824.md)
-
-3-30 [从低迷的郑州楼市看中国地域鸿沟](/articles/ft/1045825.md)
 
