--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-3 [防疫封城：各国不同定义及背后考量](/articles/dw/1042138.md)
+
 6-3 [中国「南大门」疫情渐升 广东高考如临大敌](/articles/dw/1042139.md)
 
 6-3 [南非讚世卫核准科兴疫苗 国药喊话供货全球](/articles/dw/1042140.md)
@@ -598,6 +600,4 @@
 5-17 [台湾续升抗疫措施 专家：未来两周是关键期](/articles/dw/1042436.md)
 
 5-17 [缅甸军民冲突  至少六民兵死亡](/articles/dw/1042437.md)
-
-5-17 [以色列再发动空袭 王毅批美阻安理会声明](/articles/dw/1042438.md)
 
