--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-3 [【图说天朝】在这个地方做媒体真的太惨了](/articles/cdt/381842.md)
+
 6-3 [洞见天涯｜躺平赋都出来了](/articles/cdt/381846.md)
 
 6-3 [【大外宣】中国政府网 | 习近平：努力塑造可信可爱可敬的中国形象](/articles/cdt/381856.md)
@@ -598,6 +600,4 @@
 4-28 [歪脑｜评《无依之地》：作为丧家之犬，我真羡慕赵婷](/articles/cdt/383182.md)
 
 4-28 [【麻辣总局】通过游戏的形式传播党史，你疯了？](/articles/cdt/383185.md)
-
-4-28 [奇客资讯｜猫扑宣布“为营造良好的网络环境”关闭发帖功能](/articles/cdt/383189.md)
 
