--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-3 [美国防政策主管：应对中国挑战是国防部的首要任务](/articles/voa/1040382.md)
+
 6-3 [美中经贸高官一周两度通话 美副国务卿：继续评估前政府对华贸易政策](/articles/voa/1040383.md)
 
 6-3 [白宫要义: 拜登力推国庆节前70%人口至少一剂接种](/articles/voa/1040384.md)
@@ -598,6 +600,4 @@
 5-20 [拜登、文在寅联合声明将提台湾，强度将不亚于美日联合声明](/articles/voa/1040680.md)
 
 5-20 [美军舰驶入“西沙群岛领海”展示航行自由 中国指责美国搞霸权](/articles/voa/1040681.md)
-
-5-20 [拜登寻求巴以停火 共和党人担心美国暂停军援向以色列施压](/articles/voa/1040682.md)
 
