--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-3 [德-俄民航争端平息](/articles/dw/1042136.md)
+
+6-3 [骑车示威 抗议健身同行](/articles/dw/1042137.md)
+
 6-3 [防疫封城：各国不同定义及背后考量](/articles/dw/1042138.md)
 
 6-3 [中国「南大门」疫情渐升 广东高考如临大敌](/articles/dw/1042139.md)
@@ -596,8 +600,4 @@
 5-17 [防疫“优等生”台湾为何深陷疫苗短缺困境](/articles/dw/1042434.md)
 
 5-17 [空间站和火箭残骸坠海之后?](/articles/dw/1042435.md)
-
-5-17 [台湾续升抗疫措施 专家：未来两周是关键期](/articles/dw/1042436.md)
-
-5-17 [缅甸军民冲突  至少六民兵死亡](/articles/dw/1042437.md)
 
