--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-3 [胡志明市聚集疫情暴发，越南面临新一轮考验](/articles/nyt/1046778.md)
+
 6-3 [纽约大都会运输署4月遭入侵，黑客据信与中国政府有关](/articles/nyt/1046779.md)
 
 6-3 [陈锡兰，用舞步团结世界的社会主义舞蹈家](/articles/nyt/1046780.md)
@@ -598,6 +600,4 @@
 3-18 [拜登与习近平谨慎博弈，美国新对华政策现雏形](/articles/nyt/1047076.md)
 
 3-18 [关于亚特兰大枪击案，目前我们所知道的](/articles/nyt/1047077.md)
-
-3-18 [中美高层对话前夕，美国就香港问题制裁24名中共官员](/articles/nyt/1047078.md)
 
