--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-3 [中国乳制品需求高涨，奶牛不足难解市场之渴](/articles/voa/1040377.md)
+
+6-3 [亲历者回忆六四：民主和自由与青春和觉醒同步（上）](/articles/voa/1040378.md)
+
+6-3 [政治评论人士仇子明被判入狱8个月](/articles/voa/1040379.md)
+
+6-3 [5月中国服务业扩张放缓](/articles/voa/1040380.md)
+
+6-3 [美国重申不会以疫苗换取政治利益](/articles/voa/1040381.md)
+
 6-3 [美国防政策主管：应对中国挑战是国防部的首要任务](/articles/voa/1040382.md)
 
 6-3 [美中经贸高官一周两度通话 美副国务卿：继续评估前政府对华贸易政策](/articles/voa/1040383.md)
@@ -590,14 +600,4 @@
 5-20 [字节跳动创建人张一鸣将卸任首席执行官](/articles/voa/1040675.md)
 
 5-20 [政治红线无从掌握 香港“黄营”工会危机四伏](/articles/voa/1040676.md)
-
-5-20 [担心负债过大 即将上任的萨摩亚新总理称会搁置中国投资港口计划](/articles/voa/1040677.md)
-
-5-20 [中国在塞拉利昂雨林中建造渔港的交易遭到强烈抵制](/articles/voa/1040678.md)
-
-5-20 [爱立信的中国雄心或因华为禁令遇挫](/articles/voa/1040679.md)
-
-5-20 [拜登、文在寅联合声明将提台湾，强度将不亚于美日联合声明](/articles/voa/1040680.md)
-
-5-20 [美军舰驶入“西沙群岛领海”展示航行自由 中国指责美国搞霸权](/articles/voa/1040681.md)
 
