--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+6-3 [斯里兰卡准备应对“漏油”灾难 印度提供支援](/articles/rfi/1028673.md)
+
+6-3 [印尼外海6.1浅层地震 尚无人员伤亡通报 – 法国国际广播电台 - RFI](/articles/rfi/1028674.md)
+
+6-3 [丹麦通过新法 将庇护申请者送到欧洲以外地区 – 法国国际广播电台 - RFI](/articles/rfi/1028675.md)
+
+6-3 [习近平希望打造中国“友好并受人尊敬”形象 - 法国报纸摘要](/articles/rfi/1028676.md)
+
+6-3 [中欧全面投资协定”对中欧双方的价值是不一样的 - 观察中国](/articles/rfi/1028677.md)
+
+6-3 [报道称拜登将重新修订特朗普的中国企业黑名单](/articles/rfi/1028678.md)
+
+6-3 [儿童权利基金会示警 疫情冲击恐酿世代灾难 – 法国国际广播电台 - RFI](/articles/rfi/1028679.md)
+
+6-3 [奈及利亚证实 武装分子绑走136名学童 – 法国国际广播电台 - RFI](/articles/rfi/1028680.md)
+
+6-3 [德承认种族灭绝  纳米比亚人批没诚意 – 法国国际广播电台 - RFI](/articles/rfi/1028681.md)
+
 6-3 [俄新闻网站VTimes遭标外国代理人 宣布被迫关站 – 法国国际广播电台 - RFI](/articles/rfi/1028682.md)
 
 6-3 [胡梅尔斯与穆勒国家队凤还巢 德国踢和丹麦 – 法国国际广播电台 - RFI](/articles/rfi/1028683.md)
@@ -582,22 +600,4 @@
 5-29 [中国当局促喜马拉雅放弃赴美上市而改去香港](/articles/rfi/1028971.md)
 
 5-29 [以千万豪宅利诱市民接种疫苗 谷针威迫利诱样样齐](/articles/rfi/1028972.md)
-
-5-29 [重判民主派领袖入狱的法官收恐吓电话](/articles/rfi/1028973.md)
-
-5-29 [民主派和平游行被囚 香港监察促联合国设香港特派员跟进](/articles/rfi/1028974.md)
-
-5-29 [世卫官员指控新冠病毒溯源“被政治毒化了” 指谁没明说](/articles/rfi/1028975.md)
-
-5-29 [蔡政府祭“反中牌”，防堵中共对岛内施展促统战术 - 观察中国](/articles/rfi/1028976.md)
-
-5-29 [老鹰105比94击败尼克 拿下NBA季后赛首轮第3战 – 法国国际广播电台 - RFI](/articles/rfi/1028977.md)
-
-5-29 [塔特姆飙50分 塞尔蒂克破篮网季后赛扳回一城 – 法国国际广播电台 - RFI](/articles/rfi/1028978.md)
-
-5-29 [阿拉巴挥别拜仁 欧国杯后改披皇马战袍 – 法国国际广播电台 - RFI](/articles/rfi/1028979.md)
-
-5-29 [杨恩21分14助攻 老鹰季后赛第3战击败尼克 – 法国国际广播电台 - RFI](/articles/rfi/1028980.md)
-
-5-29 [拜登提6兆美元预算案增进竞争力 闯国会结果难料 – 法国国际广播电台 - RFI](/articles/rfi/1028981.md)
 
