--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-3 [香港保安局警告汇丰花旗 动摇投资人对银行体系信心](/articles/voa/1040376.md)
+
 6-3 [中国乳制品需求高涨，奶牛不足难解市场之渴](/articles/voa/1040377.md)
 
 6-3 [亲历者回忆六四：民主和自由与青春和觉醒同步（上）](/articles/voa/1040378.md)
@@ -598,6 +600,4 @@
 5-20 [中国天舟二号货运飞船因技术原因推迟发射](/articles/voa/1040674.md)
 
 5-20 [字节跳动创建人张一鸣将卸任首席执行官](/articles/voa/1040675.md)
-
-5-20 [政治红线无从掌握 香港“黄营”工会危机四伏](/articles/voa/1040676.md)
 
