--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-3 [香港当局将部署7000名警察 严防六四烛光点亮香港](/articles/voa/1040373.md)
+
+6-3 [台湾指责中国以疫苗谋取政治利益](/articles/voa/1040374.md)
+
+6-3 [中共党史掩盖和扭曲重大历史事件(1)：八九六四那一夜，“人民军队” 残杀了人民](/articles/voa/1040375.md)
+
 6-3 [香港保安局警告汇丰花旗 动摇投资人对银行体系信心](/articles/voa/1040376.md)
 
 6-3 [中国乳制品需求高涨，奶牛不足难解市场之渴](/articles/voa/1040377.md)
@@ -594,10 +600,4 @@
 5-20 [台湾总统蔡英文有惊无险，病毒测试阴性](/articles/voa/1040671.md)
 
 5-20 [首例国安法案件庭审不设陪审团，香港百年司法传统被颠覆](/articles/voa/1040672.md)
-
-5-20 [红色现象引人注目，文革是否会卷土重来？](/articles/voa/1040673.md)
-
-5-20 [中国天舟二号货运飞船因技术原因推迟发射](/articles/voa/1040674.md)
-
-5-20 [字节跳动创建人张一鸣将卸任首席执行官](/articles/voa/1040675.md)
 
