--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-3 [美军电侦机抵近东海 搜集弹道导弹试射情报](/articles/rfa/1045419.md)
+
 6-3 [“转移、做假、中国强大论”  六四洗白论述大举进攻](/articles/rfa/1045420.md)
 
 6-3 [为阻港人悼六四  港府千方百计文攻武吓](/articles/rfa/1045421.md)
@@ -598,6 +600,4 @@
 4-30 [全方位打压学生会 ：香港院校自主和学术自由尚存多少？](/articles/rfa/1045717.md)
 
 4-30 [浙江11例新冠病毒确诊患者中有10例来自印度](/articles/rfa/1045718.md)
-
-4-30 [环保组织发起人薛仁义出狱    当局如临大敌](/articles/rfa/1045719.md)
 
