--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-3 [人权观察呼吁中国政府承认并承担六四天安门大屠杀责任](/articles/voa/1040371.md)
+
+6-3 [长荣航空天天飞 台湾民众搭机赴美打疫苗](/articles/voa/1040372.md)
+
 6-3 [香港当局将部署7000名警察 严防六四烛光点亮香港](/articles/voa/1040373.md)
 
 6-3 [台湾指责中国以疫苗谋取政治利益](/articles/voa/1040374.md)
@@ -596,8 +600,4 @@
 5-21 [联合国即将就以巴冲突问题举行会议](/articles/voa/1040669.md)
 
 5-20 [中国船只现身东太平洋 引夏威夷军民担忧](/articles/voa/1040670.md)
-
-5-20 [台湾总统蔡英文有惊无险，病毒测试阴性](/articles/voa/1040671.md)
-
-5-20 [首例国安法案件庭审不设陪审团，香港百年司法传统被颠覆](/articles/voa/1040672.md)
 
