--- a/articles/cdt/381867.md
+++ b/articles/cdt/381867.md
@@ -1,5 +1,5 @@
-<!--1622671914000-->
-[【CDT公告】播客《CDT404档案馆》即将上线](https://chinadigitaltimes.net/chinese/666708.html)
+<!--1622735454000-->
+[【CDT公告】CDT播客《404档案馆》上线，首期谈六四敏感词与真理部指令](https://chinadigitaltimes.net/chinese/666708.html)
 ------
 
-<p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/06/海报2-1024x1024.jpg" alt="img"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/06/海报2-1024x1024.jpg" alt="img"></p><p>播客《<a href="https://anchor.fm/chinadigitaltimes" title="CDT404档案馆">CDT404档案馆</a>》将于6月4日正式上线。欢迎收听！</p><p>《CDT404档案馆》是中国数字时代/CDT的一档音频节目。CDT是一个中英双语的网站，致力于记录和传播中文互联网上被审查的信息，以及人们对抗政治压迫的努力。</p><p>在这里，您会听到互联网敏感词的检测结果和分析，以及被删除和屏蔽的重要相关文章的推荐。</p><p>每个话题大约五分钟，方便您快速了解热点敏感词事件的前因后果。</p><p>同时我们也邀请您参加中国数字时代<a href="https://chinadigitaltimes.net/chinese/sensitive-words-project" title="敏感词开源研究项目">敏感词开源研究项目</a>，为记录和对抗中国网络审查作出你的贡献！详情请访问我们的网站 CDT.MEDIA</p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/666708.html" data-a2a-title="【CDT公告】播客《CDT404档案馆》即将上线"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91%E6%92%AD%E5%AE%A2%E3%80%8ACDT404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E5%8D%B3%E5%B0%86%E4%B8%8A%E7%BA%BF" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91%E6%92%AD%E5%AE%A2%E3%80%8ACDT404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E5%8D%B3%E5%B0%86%E4%B8%8A%E7%BA%BF" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91%E6%92%AD%E5%AE%A2%E3%80%8ACDT404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E5%8D%B3%E5%B0%86%E4%B8%8A%E7%BA%BF" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91%E6%92%AD%E5%AE%A2%E3%80%8ACDT404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E5%8D%B3%E5%B0%86%E4%B8%8A%E7%BA%BF" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91%E6%92%AD%E5%AE%A2%E3%80%8ACDT404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E5%8D%B3%E5%B0%86%E4%B8%8A%E7%BA%BF" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
+<p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/06/海报2-1024x1024.jpg" alt="img"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/06/海报2-1024x1024.jpg" alt="img"></p><p>中国数字时代播客《<a href="https://anchor.fm/chinadigitaltimes" title="CDT404档案馆">404档案馆</a>》于6月4日正式上线，首期节目是《<a href="https://anchor.fm/chinadigitaltimes" title="六四敏感词与真理部指令">六四敏感词与真理部指令</a>》。欢迎收听！</p><p>《CDT404档案馆》是中国数字时代/CDT的一档音频节目。CDT是一个中英双语的网站，致力于记录和传播中文互联网上被审查的信息，以及人们对抗政治压迫的努力。</p><p>在这里，您会听到互联网敏感词的检测结果和分析，以及被删除和屏蔽的重要相关文章的推荐。</p><p>每个话题大约五分钟，方便您快速了解热点敏感词事件的前因后果。</p><p>同时我们也邀请您参加中国数字时代<a href="https://chinadigitaltimes.net/chinese/sensitive-words-project" title="敏感词开源研究项目">敏感词开源研究项目</a>，为记录和对抗中国网络审查作出你的贡献！详情请访问我们的网站 CDT.MEDIA</p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/666708.html" data-a2a-title="【CDT公告】CDT播客《404档案馆》上线，首期谈六四敏感词与真理部指令"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91CDT%E6%92%AD%E5%AE%A2%E3%80%8A404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E4%B8%8A%E7%BA%BF%EF%BC%8C%E9%A6%96%E6%9C%9F%E8%B0%88%E5%85%AD%E5%9B%9B%E6%95%8F%E6%84%9F%E8%AF%8D%E4%B8%8E%E7%9C%9F%E7%90%86%E9%83%A8%E6%8C%87%E4%BB%A4" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91CDT%E6%92%AD%E5%AE%A2%E3%80%8A404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E4%B8%8A%E7%BA%BF%EF%BC%8C%E9%A6%96%E6%9C%9F%E8%B0%88%E5%85%AD%E5%9B%9B%E6%95%8F%E6%84%9F%E8%AF%8D%E4%B8%8E%E7%9C%9F%E7%90%86%E9%83%A8%E6%8C%87%E4%BB%A4" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91CDT%E6%92%AD%E5%AE%A2%E3%80%8A404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E4%B8%8A%E7%BA%BF%EF%BC%8C%E9%A6%96%E6%9C%9F%E8%B0%88%E5%85%AD%E5%9B%9B%E6%95%8F%E6%84%9F%E8%AF%8D%E4%B8%8E%E7%9C%9F%E7%90%86%E9%83%A8%E6%8C%87%E4%BB%A4" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91CDT%E6%92%AD%E5%AE%A2%E3%80%8A404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E4%B8%8A%E7%BA%BF%EF%BC%8C%E9%A6%96%E6%9C%9F%E8%B0%88%E5%85%AD%E5%9B%9B%E6%95%8F%E6%84%9F%E8%AF%8D%E4%B8%8E%E7%9C%9F%E7%90%86%E9%83%A8%E6%8C%87%E4%BB%A4" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F666708.html&amp;linkname=%E3%80%90CDT%E5%85%AC%E5%91%8A%E3%80%91CDT%E6%92%AD%E5%AE%A2%E3%80%8A404%E6%A1%A3%E6%A1%88%E9%A6%86%E3%80%8B%E4%B8%8A%E7%BA%BF%EF%BC%8C%E9%A6%96%E6%9C%9F%E8%B0%88%E5%85%AD%E5%9B%9B%E6%95%8F%E6%84%9F%E8%AF%8D%E4%B8%8E%E7%9C%9F%E7%90%86%E9%83%A8%E6%8C%87%E4%BB%A4" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
