--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-4 [中国：中美经贸领域已开始正常沟通](/articles/rfi/1028659.md)
+
+6-3 [风声鹤唳 港人如何坚持纪念六四 - 要闻解说](/articles/rfi/1028660.md)
+
 6-3 [香港纪念6.4再被禁 港人今年创意多](/articles/rfi/1028661.md)
 
 6-3 [世界球后巴蒂因伤退出法网 – 法国国际广播电台 - RFI](/articles/rfi/1028662.md)
@@ -596,8 +600,4 @@
 5-29 [中国称疫苗接种已过6亿](/articles/rfi/1028957.md)
 
 5-29 [圣母峰正值登山季 大本营却传COVID-19疫情 – 法国国际广播电台 - RFI](/articles/rfi/1028958.md)
-
-5-29 [法国有责但无罪：悼卢旺达屠杀马克龙的外交策略 - 法国报纸摘要](/articles/rfi/1028959.md)
-
-5-29 [拜登宣布国防预算新计划 旨在遏制中国](/articles/rfi/1028960.md)
 
