--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-4 [拜登：反腐是延续民主制度的关键所在](/articles/voa/1040369.md)
+
+6-4 [比利时大使夫人掌掴韩国店员酿成外交风波 韩网友: 又是中国人](/articles/voa/1040370.md)
+
 6-3 [人权观察呼吁中国政府承认并承担六四天安门大屠杀责任](/articles/voa/1040371.md)
 
 6-3 [长荣航空天天飞 台湾民众搭机赴美打疫苗](/articles/voa/1040372.md)
@@ -596,8 +600,4 @@
 5-21 [证据显示中石油向缅甸军政府出口航空燃料](/articles/voa/1040667.md)
 
 5-21 [新加坡香格里拉对话会因新冠疫情取消](/articles/voa/1040668.md)
-
-5-21 [联合国即将就以巴冲突问题举行会议](/articles/voa/1040669.md)
-
-5-20 [中国船只现身东太平洋 引夏威夷军民担忧](/articles/voa/1040670.md)
 
