--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-3 [疫苗战号角响起？危地马拉表态不买中国疫苗也不会跟北京建交](/articles/rfa/1045418.md)
+
 6-3 [美军电侦机抵近东海 搜集弹道导弹试射情报](/articles/rfa/1045419.md)
 
 6-3 [“转移、做假、中国强大论”  六四洗白论述大举进攻](/articles/rfa/1045420.md)
@@ -598,6 +600,4 @@
 5-1 [福建开启台胞入境便捷通道](/articles/rfa/1045716.md)
 
 4-30 [全方位打压学生会 ：香港院校自主和学术自由尚存多少？](/articles/rfa/1045717.md)
-
-4-30 [浙江11例新冠病毒确诊患者中有10例来自印度](/articles/rfa/1045718.md)
 
