--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+6-4 [美国重申以色列有权自卫](/articles/voa/1040360.md)
+
+6-4 [又到六四周年 学运领袖吁把天安门事件摆上台面、撬动北京](/articles/voa/1040361.md)
+
+6-4 [拜登签署行政令 禁止投资损害美国及盟友安全或民主价值观的中国公司](/articles/voa/1040362.md)
+
+6-4 [拜登将访问欧洲以修复同盟关系](/articles/voa/1040363.md)
+
 6-4 [香港行为艺术家与童装店合作 六四晚派特制“烛光有罪”蜡烛悼死难者](/articles/voa/1040364.md)
 
 6-4 [时事大家谈: 西方学者：六·四如何改变中国的现在和未来？](/articles/voa/1040365.md)
@@ -592,12 +600,4 @@
 5-21 [以色列与哈马斯同意停火](/articles/voa/1040658.md)
 
 5-21 [习近平任期明年届满, 接班问题疑窦丛生](/articles/voa/1040659.md)
-
-5-21 [众议员提出议案，要求拜登采取行动解决在新疆发生的“种族灭绝”](/articles/voa/1040660.md)
-
-5-21 [美一参议员提议禁止联邦退休金计划对中国投资](/articles/voa/1040661.md)
-
-5-21 [美宇航局计划让“机智号”火星直升机进行第六次飞行](/articles/voa/1040662.md)
-
-5-21 [拜登总统签署旨在打击针对亚裔仇恨犯罪的法案](/articles/voa/1040663.md)
 
