--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+6-4 [西方国家续追疫情源头 福奇：病毒溯源不应对中国过度指责](/articles/rfa/1045412.md)
+
+6-4 [公民记者张展获第二十一届“青年中国人权奖”](/articles/rfa/1045413.md)
+
+6-4 [微信直播新规定：  意在言论管控亦无法保护儿童](/articles/rfa/1045414.md)
+
+6-4 [纪念与遗忘： 两代人的六四观](/articles/rfa/1045415.md)
+
 6-4 [专访苏葆立(下集)：习近平如何“片段”纪念胡耀邦?](/articles/rfa/1045416.md)
 
 6-4 [疫苗高峰会日本捐钱和疫苗   制衡中国疫苗外交](/articles/rfa/1045417.md)
@@ -592,12 +600,4 @@
 5-1 [如何应对中共犯台?     美国安、国防、情报部门接连回应](/articles/rfa/1045710.md)
 
 5-1 [基辛格：美中应保持对话   但要守住价值观](/articles/rfa/1045711.md)
-
-5-1 [北京小汤山强拆后续：业主张蒙被带走失联多日  小区遭彻底清场](/articles/rfa/1045712.md)
-
-5-1 [接种中国疫苗：匈牙利仍是全球新冠死亡率最高国家之一](/articles/rfa/1045713.md)
-
-5-1 [加拿大香港人和台湾人发起身份认同：不称自己是中国人](/articles/rfa/1045714.md)
-
-5-1 [经济学人“台湾是地球最危险之地”   台湾人看法不一](/articles/rfa/1045715.md)
 
