--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-4 [【404档案馆】成都49中学生坠亡事件](/articles/cdt/381811.md)
+
 6-3 [【网络民议】加速主义发展出新形态？当人人都成为“反串黑”](/articles/cdt/381836.md)
 
 6-3 [【图说天朝】在这个地方做媒体真的太惨了](/articles/cdt/381842.md)
@@ -598,6 +600,4 @@
 4-29 [LGBT权促会 | 那个被劝退的同性恋学生，决定起诉学校](/articles/cdt/383177.md)
 
 4-29 [【CDT媒体报告会】编程随想｜近期安全动态和点评（2021年1季度）](/articles/cdt/383179.md)
-
-4-28 [歪脑｜评《无依之地》：作为丧家之犬，我真羡慕赵婷](/articles/cdt/383182.md)
 
