--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-4 [美国将送出8000万剂新冠疫苗 薛瑞福呼吁优先发送给台湾](/articles/rfi/1028643.md)
+
+6-4 [六四两个字 - 要闻分析](/articles/rfi/1028644.md)
+
+6-4 [张维为给政治局上课 可忧可忧？](/articles/rfi/1028645.md)
+
 6-4 [缅甸动荡 ICRC、东协特使陆续会军头 – 法国国际广播电台 - RFI](/articles/rfi/1028646.md)
 
 6-4 [艾未未里斯本展览会周五开幕 艺术家向居住国葡萄牙致敬](/articles/rfi/1028647.md)
@@ -594,10 +600,4 @@
 5-30 [蔡英文论文门事件 台湾在位总统起诉一平民百姓 史来第一 - 中华世界](/articles/rfi/1028941.md)
 
 5-30 [六四还没有成为历史，美国华人举办多项活动，纪念六四屠杀32周年](/articles/rfi/1028942.md)
-
-5-30 [新冠病毒溯源：拜登敢下命令 专家不敢乐观 - 要闻分析](/articles/rfi/1028943.md)
-
-5-30 [台湾疫情严峻， 疫苗成为关注焦点 - 要闻解说](/articles/rfi/1028944.md)
-
-5-30 [要求联合国为释放黎智英而采取行动 无国界记者组织（RSF）发声](/articles/rfi/1028945.md)
 
