--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-4 [香港六四维园烛光不再 海外港人誓言延续传统](/articles/dw/1042123.md)
+
 6-3 [中国称进口儿童用品有问题 H&M、耐克等被点名](/articles/dw/1042124.md)
 
 6-3 [拜登政府修订中国“涉军企业”实体清单](/articles/dw/1042125.md)
@@ -598,6 +600,4 @@
 5-18 [台湾疫情恶化 外交官盼争取更多疫苗](/articles/dw/1042421.md)
 
 5-18 [美三度阻挡安理会声明 北京要华盛顿承担责任](/articles/dw/1042422.md)
-
-5-17 [德国经济部:今年德国经济有望增长3-4%](/articles/dw/1042423.md)
 
