--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-4 [六四一早 香港支联会副主席邹幸彤被捕 – 法国国际广播电台 - RFI](/articles/rfi/1028641.md)
+
+6-4 [纳达尔35岁庆生 直落三击败地主晋级法网第3轮 – 法国国际广播电台 - RFI](/articles/rfi/1028642.md)
+
 6-4 [美国将送出8000万剂新冠疫苗 薛瑞福呼吁优先发送给台湾](/articles/rfi/1028643.md)
 
 6-4 [六四两个字 - 要闻分析](/articles/rfi/1028644.md)
@@ -596,8 +600,4 @@
 5-30 [中国天舟2号货运飞船 与天和核心舱成功对接 – 法国国际广播电台 - RFI](/articles/rfi/1028939.md)
 
 5-30 [中国成功发射天舟2号货运飞船 – 法国国际广播电台 - RFI](/articles/rfi/1028940.md)
-
-5-30 [蔡英文论文门事件 台湾在位总统起诉一平民百姓 史来第一 - 中华世界](/articles/rfi/1028941.md)
-
-5-30 [六四还没有成为历史，美国华人举办多项活动，纪念六四屠杀32周年](/articles/rfi/1028942.md)
 
