--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,14 @@
 纽约时报
 ------
 
+6-4 [拜登扩大特朗普时代中企投资“黑名单”](/articles/nyt/1046773.md)
+
+6-4 [简报：拜登扩大中企投资“黑名单”；香港严防“六四”纪念活动](/articles/nyt/1046774.md)
+
+6-4 [15头亚洲象的漫长迁徙：它们为何北迁？](/articles/nyt/1046775.md)
+
+6-4 [中国叫停山地越野赛，甘肃赛事遇难者家属仍在寻找答案](/articles/nyt/1046776.md)
+
 6-4 [生三胎？美国华人也犹豫](/articles/nyt/1046777.md)
 
 6-3 [胡志明市聚集疫情暴发，越南面临新一轮考验](/articles/nyt/1046778.md)
@@ -592,12 +600,4 @@
 3-19 [简报：美中高层会面针锋相对；两名加拿大人将在中国受审](/articles/nyt/1047071.md)
 
 3-19 [两名在华被拘加拿大人将受审，预计会发生什么？](/articles/nyt/1047072.md)
-
-3-19 [为何针对亚裔的暴力袭击难以被控仇恨犯罪？](/articles/nyt/1047073.md)
-
-3-18 [为何针对亚裔的暴力袭击难以被控仇恨犯罪？](/articles/nyt/1047074.md)
-
-3-18 [亚特兰大枪击案背后：美国亚裔的崛起和恐惧](/articles/nyt/1047075.md)
-
-3-18 [拜登与习近平谨慎博弈，美国新对华政策现雏形](/articles/nyt/1047076.md)
 
