--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-4 [香港出台多项刺激措施，居民仍对疫苗心存疑虑](/articles/nyt/1046772.md)
+
 6-4 [拜登扩大特朗普时代中企投资“黑名单”](/articles/nyt/1046773.md)
 
 6-4 [简报：拜登扩大中企投资“黑名单”；香港严防“六四”纪念活动](/articles/nyt/1046774.md)
@@ -598,6 +600,4 @@
 3-19 [朝鲜问题迫使拜登在美中关系之间寻求平衡](/articles/nyt/1047070.md)
 
 3-19 [简报：美中高层会面针锋相对；两名加拿大人将在中国受审](/articles/nyt/1047071.md)
-
-3-19 [两名在华被拘加拿大人将受审，预计会发生什么？](/articles/nyt/1047072.md)
 
