--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-4 [天安门母亲万安公墓祭亲人 “抗争到底，至死不渝！”](/articles/rfa/1045409.md)
+
 6-4 [香港与大陆看齐禁悼念六四     反令中、港、台民主运动扣联](/articles/rfa/1045410.md)
 
 6-4 [中国年轻人只知“抖音”不知“六四”  惟数十年口耳相传传承不断](/articles/rfa/1045411.md)
@@ -598,6 +600,4 @@
 5-3 [辽宁号秀肌肉变出洋相  退休将领被追究责任](/articles/rfa/1045707.md)
 
 5-3 [千名缅人台北游行 呼吁国际定性缅甸军政府为恐怖组织](/articles/rfa/1045708.md)
-
-5-2 [印度疫情严重 达赖喇嘛与台湾视讯祈福 流亡藏人捐一日工资](/articles/rfa/1045709.md)
 
