--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-4 [六四：香港支联会副主席被捕](/articles/rfi/1028633.md)
+
+6-4 [比利时众星缺阵 热身赛踢和希腊 – 法国国际广播电台 - RFI](/articles/rfi/1028634.md)
+
+6-4 [美国传染病专家福奇呼吁中国公布武汉实验室研究人员的医疗记录](/articles/rfi/1028635.md)
+
+6-4 [六四32周年 美国向天安门事件罹难者和坚持抗争者致敬](/articles/rfi/1028636.md)
+
+6-4 [布克47分轰垮卫冕军湖人 太阳闯季后赛次轮 – 法国国际广播电台 - RFI](/articles/rfi/1028637.md)
+
 6-4 [亚历山大阿诺德拉伤大腿 无缘欧国杯 – 法国国际广播电台 - RFI](/articles/rfi/1028638.md)
 
 6-4 [U21欧国杯 德国神速进球擒荷兰杀入决赛 – 法国国际广播电台 - RFI](/articles/rfi/1028639.md)
@@ -590,14 +600,4 @@
 5-30 [约翰逊：不相信新冠病毒由武汉实验室泄漏 持开放态度](/articles/rfi/1028931.md)
 
 5-30 [印陆军参谋长：正以坚定和不升级方式与中国打交道](/articles/rfi/1028932.md)
-
-5-30 [香港终审法院首席法官张举能：司法权不受干预](/articles/rfi/1028933.md)
-
-5-30 [日在野党拟提修例 允许自卫队当生命受威胁时使用武器](/articles/rfi/1028934.md)
-
-5-30 [六四游行集会上诉遭驳回 支联会：十分遗憾](/articles/rfi/1028935.md)
-
-5-30 [美英德等21国最强烈地谴责白俄当局迫降客机事件](/articles/rfi/1028936.md)
-
-5-30 [劫持客机事件 美国重启对9家白俄国企封锁制裁](/articles/rfi/1028937.md)
 
