--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-4 [拜登愿意为达成基建协议放弃提高企业税](/articles/ft/1045519.md)
+
 6-4 [约翰逊飞速结婚，是为报复卡明斯还是为欢迎拜登？](/articles/ft/1045520.md)
 
 6-4 [上海时代](/articles/ft/1045521.md)
@@ -598,6 +600,4 @@
 3-31 [凯茜•伍德看好中国科技颠覆者](/articles/ft/1045817.md)
 
 3-31 [小米宣布进军电动汽车市场](/articles/ft/1045818.md)
-
-3-31 [距离制造强国，中国制造还缺什么？](/articles/ft/1045819.md)
 
