--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,26 @@
 路透
 ------
 
+6-4 [调查：中国货币政策稳局难破半年末迎资金大考 人民币升值预期转谨慎](/articles/reuters/1037237.md)
+
+6-4 [汇市一周综述：中国央行放大招阻升人民币 美联储缩表或动真格](/articles/reuters/1037238.md)
+
+6-4 [中国金融市场一周走势回顾](/articles/reuters/1037239.md)
+
+6-4 [如果没有运动员来日本 那就办不成奥运--东京2020奥组委主席](/articles/reuters/1037240.md)
+
+6-4 [人民币收创近两周新低并录得八个月最大周跌幅 关注美非农数据](/articles/reuters/1037241.md)
+
+6-4 [境外机构5月净买入中国债券环比降四成 中美利差低位对冲汇率升值吸引力](/articles/reuters/1037242.md)
+
+6-4 [图表新闻：5月全球并购活动激增 交易规模连三个月达纪录高位](/articles/reuters/1037243.md)
+
+6-4 [美国禁止实体投资59家中国企业 中国外交部敦促撤销打压中企“清单”](/articles/reuters/1037244.md)
+
+6-4 [综述：弱势美元还要持续多久？分析师看法泾渭分明--路透调查](/articles/reuters/1037245.md)
+
+6-4 [分析：汇率掣肘消退中国央行持续百亿操作定军心 低超储下资金仍暂无忧](/articles/reuters/1037246.md)
+
 6-4 [中国重要财经新闻一周回顾](/articles/reuters/1037247.md)
 
 6-4 [中国股市受金融股提振上涨 但周线收跌](/articles/reuters/1037248.md)
@@ -580,24 +600,4 @@
 5-28 [美国告知俄罗斯不会重新加入开放天空条约](/articles/reuters/1037535.md)
 
 5-28 [焦点：美财长叶伦称拜登的预算计划将推高债务/GDP之比 但不会助长通胀](/articles/reuters/1037536.md)
-
-5-28 [调查：新冠疫情对印度经济影响加深 就业危机可能恶化](/articles/reuters/1037537.md)
-
-5-28 [亚洲股市连涨第七天 美国刺激政策为关注焦点](/articles/reuters/1037538.md)
-
-5-28 [独家：土耳其推动北约软化对白俄罗斯迫降客机的反应--外交官](/articles/reuters/1037539.md)
-
-5-28 [戴尔和惠普称芯片短缺将限制今年的个人电脑供应](/articles/reuters/1037540.md)
-
-5-28 [日本经济再生大臣称希望将东京等地的紧急状态延长至6月20日](/articles/reuters/1037541.md)
-
-5-28 [联合国国际民航组织将调查白俄罗斯迫降客机事件 首份报告6月25日出炉](/articles/reuters/1037542.md)
-
-5-28 [美国参议院推进2021创新与竞争法案 增强对中国的科技竞争实力](/articles/reuters/1037543.md)
-
-5-28 [OPEC+下周会议或坚持当前产量政策 围绕伊朗供应存在不确定性](/articles/reuters/1037544.md)
-
-5-28 [京东物流首日挂牌开盘价高招股价14% 好于大市表现](/articles/reuters/1037545.md)
-
-5-28 [独家：美国对礼来工厂涉嫌生产和记录违规展开刑事调查--消息](/articles/reuters/1037546.md)
 
