--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-4 [中国称将对拜登政府的中企投资禁令采取“必要措施”](/articles/voa/1040351.md)
+
 6-4 [美国申领失业救济金人数连续第五周回落](/articles/voa/1040352.md)
 
 6-4 [疑似中国黑客入侵东南亚政府部门 海外维吾尔人也成目标](/articles/voa/1040353.md)
@@ -598,6 +600,4 @@
 5-21 [00后因言获罪 王靖渝赴美中转迪拜被捕面临遣返](/articles/voa/1040649.md)
 
 5-21 [华为转战云端，美中或在亚非拉开启 “云”竞争](/articles/voa/1040650.md)
-
-5-21 [竞选纽约市长，杨安泽能否有效应对反亚裔仇恨？](/articles/voa/1040651.md)
 
