--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-4 [BBC | 香港《国安法》下纪念“六四”，传承者邹幸彤谈“坚持底线和拒绝红线”](/articles/cdt/381785.md)
+
 6-4 [天安门母亲 | 吴丽虹为香港维园2021六四烛光晚会准备的发言](/articles/cdt/381787.md)
 
 6-4 [何桂兰 | “承传”的真正意义，是否只去“记忆”就可以？](/articles/cdt/381790.md)
@@ -598,6 +600,4 @@
 4-30 [法治深一度 | 第五次起诉离婚后，她终于自由了](/articles/cdt/383107.md)
 
 4-30 [记者刘向南 | 孔网线上线下卖书被罚28万,当事人长篇自述来龙去脉](/articles/cdt/383117.md)
-
-5-1 [【CDT敏感词周报】第二十二期：赵婷获奥斯卡奖、第七次全国人口普查](/articles/cdt/383130.md)
 
