--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+6-4 [反垄断背景下，“头腾大战”走向何方](/articles/ft/1045517.md)
+
+6-4 [英国和欧盟同时对Facebook发起反垄断调查](/articles/ft/1045518.md)
+
 6-4 [拜登愿意为达成基建协议放弃提高企业税](/articles/ft/1045519.md)
 
 6-4 [约翰逊飞速结婚，是为报复卡明斯还是为欢迎拜登？](/articles/ft/1045520.md)
@@ -596,8 +600,4 @@
 4-1 [新疆棉、H&M及世界秩序的矛盾运动](/articles/ft/1045815.md)
 
 4-1 [人民币兑美元汇率创逾一年半来最大单月跌幅](/articles/ft/1045816.md)
-
-3-31 [凯茜•伍德看好中国科技颠覆者](/articles/ft/1045817.md)
-
-3-31 [小米宣布进军电动汽车市场](/articles/ft/1045818.md)
 
