--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-4 [【404文库】现代聊斋余少镭 | 末班车](/articles/cdt/381779.md)
+
 6-4 [BBC | 香港《国安法》下纪念“六四”，传承者邹幸彤谈“坚持底线和拒绝红线”](/articles/cdt/381785.md)
 
 6-4 [天安门母亲 | 吴丽虹为香港维园2021六四烛光晚会准备的发言](/articles/cdt/381787.md)
@@ -598,6 +600,4 @@
 4-30 [歪脑 | 北京会忘记付国豪，但香港不会](/articles/cdt/383100.md)
 
 4-30 [现代快报 | 男子被连骗4次：网上遇美女被骗、找“网警”被骗、再找被骗、找律师被骗](/articles/cdt/383101.md)
-
-4-30 [端传媒 | 独生子女的赡养重担：不敢穷，不敢病，因为爸妈只有我](/articles/cdt/383102.md)
 
