--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-4 [港警封闭维园 民众点亮手机纪念六四](/articles/dw/1042106.md)
+
 6-4 [匈牙利拒绝谴责中国  德国外交官呼吁欧盟改革](/articles/dw/1042107.md)
 
 6-4 [德语媒体：真相在哪里？](/articles/dw/1042108.md)
@@ -598,6 +600,4 @@
 5-19 [以巴停火遥遥无期 欧盟外长开会内讧](/articles/dw/1042404.md)
 
 5-19 [得罪中国没疫苗? 巴西议会进行调查](/articles/dw/1042405.md)
-
-5-19 [北京冬奥再成焦点 佩洛西吁美进行「外交抵制」](/articles/dw/1042406.md)
 
