--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-4 [美国国会及行政当局中国委员会主席发表声明纪念六四事件32周年](/articles/voa/1040345.md)
+
+6-4 [场地被封活动人士被捕 长燃30多年的维园六四烛光难再续](/articles/voa/1040346.md)
+
+6-4 [杨恒钧案闭门庭审 澳中关系如履薄冰](/articles/voa/1040347.md)
+
 6-4 [蔡英文六四发文：不会忘记这一天，有共同信念者要相互扶持](/articles/voa/1040348.md)
 
 6-4 [日本捐台124万剂新冠疫苗抵达台湾](/articles/voa/1040349.md)
@@ -594,10 +600,4 @@
 5-21 [中国称抖音等105款应用程序违法违规收集使用个人信息](/articles/voa/1040643.md)
 
 5-21 [安全环境今非昔比 日本决定突破遵守几十年的军费限制](/articles/voa/1040644.md)
-
-5-21 [最新全球疫情：印度单日病例超过259,000 阿根廷宣布周六起严格封城](/articles/voa/1040645.md)
-
-5-21 [特斯拉在一些中国政府大院被禁](/articles/voa/1040646.md)
-
-5-21 [香港回应驻台办事处停运 指责台“粗暴干预”香港事务](/articles/voa/1040647.md)
 
