--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+6-4 [烛光晚会被禁   港人涌往圣堂寄哀思  陈日君吁中共还六四一个公道](/articles/rfa/1045403.md)
+
+6-4 [异议人士东京大阪开车巡游  悼念六四声援香港](/articles/rfa/1045404.md)
+
+6-4 [塞班岛烛光晚会悼六四   八九民运参与者忆当年](/articles/rfa/1045405.md)
+
+6-4 [疫苗外交后  中国大搞“疫苗统战”](/articles/rfa/1045406.md)
+
 6-4 [美日及时伸援手捐赠台湾疫苗 日AZ124万剂抵台](/articles/rfa/1045407.md)
 
 6-4 [香港支联会副主席邹幸彤六四清晨被捕](/articles/rfa/1045408.md)
@@ -592,12 +600,4 @@
 5-3 [陆男称驾艇横穿台湾海峡“投奔自由”   引舆论质疑](/articles/rfa/1045701.md)
 
 5-3 [美国驻法大使会见台湾代表 中国跳脚反对](/articles/rfa/1045702.md)
-
-5-3 [中央政法队伍开展自查运动   呼市政法干警376人主动坦白](/articles/rfa/1045703.md)
-
-5-3 [世界新闻自由日  香港新闻自由危如累卵](/articles/rfa/1045704.md)
-
-5-3 [战略军港落入中资手上     澳国防部警告取消租约](/articles/rfa/1045705.md)
-
-5-3 [中共“滨州舰”出现台湾基隆外海 台日军舰并航跟监](/articles/rfa/1045706.md)
 
