--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+6-5 [布林肯国务卿就六四屠杀32周年发表声明（全文翻译）](/articles/voa/1040338.md)
+
+6-5 [美疾控中心主任敦促家长为青少年子女接种新冠疫苗](/articles/voa/1040339.md)
+
+6-5 [香港支联会副主席邹幸彤六四清晨被捕 警方引公安条例围封维园](/articles/voa/1040340.md)
+
+6-5 [白宫首席医学顾问促中国公开与新冠溯源相关的9人病例档案](/articles/voa/1040341.md)
+
 6-5 [联合国粮农组织称世界粮食价格跃升至十年来最高水平](/articles/voa/1040342.md)
 
 6-5 [记者手记：莫哈韦沙漠里的六四守夜人](/articles/voa/1040343.md)
@@ -592,12 +600,4 @@
 5-22 [英“伊丽莎白女王”号航母启程前往亚洲，约翰逊：我们相信国际海洋法](/articles/voa/1040636.md)
 
 5-22 [斯里兰卡议会同意设立专门机构监督中国开发项目](/articles/voa/1040637.md)
-
-5-22 [东京奥运前景堪忧？日本卫生高官称能否举行应尽早决断](/articles/voa/1040638.md)
-
-5-22 [华裔民权团体告特朗普 指“中国病毒”说带来精神伤害](/articles/voa/1040639.md)
-
-5-22 [港区国安法首名被告不设陪审团覆核被驳回 学者忧国安法权力过大](/articles/voa/1040640.md)
-
-5-22 [从苏联氢弹之父到持不同政见者 萨哈罗夫百年诞辰](/articles/voa/1040641.md)
 
