--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-5 [美国5月份新增55.9万个就业岗位](/articles/voa/1040335.md)
+
+6-5 [众议院议长佩洛西就六四屠杀32周年发表声明(全文翻译)](/articles/voa/1040336.md)
+
+6-5 [焦点对话: 六四32周年“世代对话” 周锋锁vs.洞物员](/articles/voa/1040337.md)
+
 6-5 [布林肯国务卿就六四屠杀32周年发表声明（全文翻译）](/articles/voa/1040338.md)
 
 6-5 [美疾控中心主任敦促家长为青少年子女接种新冠疫苗](/articles/voa/1040339.md)
@@ -594,10 +600,4 @@
 5-22 [印度外长下周访美，讨论疫苗采购以及印太事务](/articles/voa/1040633.md)
 
 5-22 [美国海关扣押了一批优衣库涉嫌新疆强迫劳动的产品](/articles/voa/1040634.md)
-
-5-22 [焦点对话: 拜登对中佈局 文在寅左右为难？](/articles/voa/1040635.md)
-
-5-22 [英“伊丽莎白女王”号航母启程前往亚洲，约翰逊：我们相信国际海洋法](/articles/voa/1040636.md)
-
-5-22 [斯里兰卡议会同意设立专门机构监督中国开发项目](/articles/voa/1040637.md)
 
