--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+6-5 [美媒揭美官员被警告不要调查病毒起源](/articles/rfa/1045398.md)
+
+6-5 [王西麟的 《第三交响曲》 为纪念六四而奏响](/articles/rfa/1045399.md)
+
 6-5 [维吾尔特别法庭伦敦开审   多名证人指控中国种族灭绝](/articles/rfa/1045400.md)
 
 6-5 [旧金山数百人齐聚花园角广场  举行六四32周年悼念集会](/articles/rfa/1045401.md)
@@ -596,8 +600,4 @@
 5-4 [“一带一路”背后中国劳工的血泪：强迫劳动 惨死他乡](/articles/rfa/1045696.md)
 
 5-4 [五一调休怨声载道   折腾百姓刺激消费](/articles/rfa/1045697.md)
-
-5-4 [政治指导写作 中国新闻自由持续恶化](/articles/rfa/1045698.md)
-
-5-4 [G7外长会邀印太国家出席     美英要中俄违反人权付出代价](/articles/rfa/1045699.md)
 
