--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-5 [脸书把对特朗普的封禁维持至少两年](/articles/voa/1040331.md)
+
 6-5 [美国两党政要发表声明纪念六四事件32周年](/articles/voa/1040332.md)
 
 6-5 [拜登与普京峰会 专家分析：习近平还要被晾一段时间](/articles/voa/1040333.md)
@@ -598,6 +600,4 @@
 5-22 [美韩峰会提台海、谈同盟 抗中议题没突破](/articles/voa/1040629.md)
 
 5-22 [以色列和哈马斯都宣称取得胜利](/articles/voa/1040630.md)
-
-5-22 [20国集团领导人承诺提供更多的资金和疫苗，共同抗击新冠疫情](/articles/voa/1040631.md)
 
