--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-5 [蒲亭将会拜登 盼修补俄美关系 – 法国国际广播电台 - RFI](/articles/rfi/1028571.md)
+
+6-5 [美国加码2.6亿多美元  助阿富汗因应疫情 – 法国国际广播电台 - RFI](/articles/rfi/1028572.md)
+
 6-5 [野象群为何出走？虽没可靠解释，但研究人员还是提出了假设 - 法国世界报](/articles/rfi/1028573.md)
 
 6-5 [普京签署法律 可望用于禁止异见人士投身各项选举](/articles/rfi/1028574.md)
@@ -596,8 +600,4 @@
 5-31 [刚果火山喷发爆逃难潮 无国界医生组织忧霍乱风险加剧 – 法国国际广播电台 - RFI](/articles/rfi/1028869.md)
 
 5-31 [塞尔蒂克球迷朝厄文丢水瓶 遭波士顿警方逮捕 – 法国国际广播电台 - RFI](/articles/rfi/1028870.md)
-
-5-31 [接获炸弹威胁 瑞恩航空客机迫降德国 – 法国国际广播电台 - RFI](/articles/rfi/1028871.md)
-
-5-31 [大直美抵制媒体缺席记者会 纳达尔和巴蒂：有义务受访 – 法国国际广播电台 - RFI](/articles/rfi/1028872.md)
 
