--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-5 [鱼眼观察｜害怕生不起？“三胎贷”来了](/articles/cdt/381735.md)
+
+6-5 [香港01｜被指为731部队洗白 微博科普作家道歉 科学松鼠会宣布关停账号](/articles/cdt/381743.md)
+
 6-4 [【404文库】现代聊斋余少镭 | 末班车](/articles/cdt/381779.md)
 
 6-4 [BBC | 香港《国安法》下纪念“六四”，传承者邹幸彤谈“坚持底线和拒绝红线”](/articles/cdt/381785.md)
@@ -596,8 +600,4 @@
 5-1 [【立此存照】苹果防丢神器AirTag中国版：不得镌刻敏感词](/articles/cdt/383094.md)
 
 5-1 [三联生活周刊｜15岁到28岁，我的黄金时代都在工厂流水线上](/articles/cdt/383098.md)
-
-4-30 [歪脑 | 北京会忘记付国豪，但香港不会](/articles/cdt/383100.md)
-
-4-30 [现代快报 | 男子被连骗4次：网上遇美女被骗、找“网警”被骗、再找被骗、找律师被骗](/articles/cdt/383101.md)
 
