--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,10 @@
 
 6-5 [香港01｜被指为731部队洗白 微博科普作家道歉 科学松鼠会宣布关停账号](/articles/cdt/381743.md)
 
+6-5 [歪脑 | 遗忘术：“八九六四”从中国互联网中消失的脚印](/articles/cdt/381753.md)
+
+6-5 [【CDT敏感词周报】第二十七期：系统维护、广场施工、缅怀先烈、邹幸彤、三孩生肓](/articles/cdt/381772.md)
+
 6-4 [【404文库】现代聊斋余少镭 | 末班车](/articles/cdt/381779.md)
 
 6-4 [BBC | 香港《国安法》下纪念“六四”，传承者邹幸彤谈“坚持底线和拒绝红线”](/articles/cdt/381785.md)
@@ -596,8 +600,4 @@
 5-1 [差评｜看完这个老哥的曝光，我不想再打开智能电视了](/articles/cdt/383075.md)
 
 5-1 [【中国哭墙】希望你所爱的这个国家，会越来越好（4月25-5月1日，2021年）](/articles/cdt/383078.md)
-
-5-1 [【立此存照】苹果防丢神器AirTag中国版：不得镌刻敏感词](/articles/cdt/383094.md)
-
-5-1 [三联生活周刊｜15岁到28岁，我的黄金时代都在工厂流水线上](/articles/cdt/383098.md)
 
