--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-5 [流落南方 | 失联的比赛、盲搜的救援和嚎啕大哭的志愿者](/articles/cdt/381730.md)
+
 6-5 [鱼眼观察｜害怕生不起？“三胎贷”来了](/articles/cdt/381735.md)
 
 6-5 [香港01｜被指为731部队洗白 微博科普作家道歉 科学松鼠会宣布关停账号](/articles/cdt/381743.md)
@@ -598,6 +600,4 @@
 5-1 [【立此存照】中国驻日大使馆：“这就是美国送来的民主”](/articles/cdt/383073.md)
 
 5-1 [差评｜看完这个老哥的曝光，我不想再打开智能电视了](/articles/cdt/383075.md)
-
-5-1 [【中国哭墙】希望你所爱的这个国家，会越来越好（4月25-5月1日，2021年）](/articles/cdt/383078.md)
 
