--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-5 [“六四”独坐维园 韩东方：香港尚未死](/articles/voa/1040326.md)
+
 6-5 [红云压城 香港最后一份民主派报纸能否逃脱厄运？](/articles/voa/1040327.md)
 
 6-5 [特鲁多：北京主办冬奥会为在人权问题上向中国施压提供了机会](/articles/voa/1040328.md)
@@ -598,6 +600,4 @@
 5-22 [美国会共和党人推新法 将对中国间谍、知识产权盗窃者拒发签证](/articles/voa/1040624.md)
 
 5-22 [美参院积极推动中国法案 新增动议为港人提供庇护、防止中国盗窃](/articles/voa/1040625.md)
-
-5-22 [拜登、文在寅宣布美韩疫苗合作](/articles/voa/1040626.md)
 
