--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-5 [匿名网友 | 在线众包多媒体项目《广场犹在》](/articles/cdt/381714.md)
+
+6-5 [在野登山队 | 如若我也有权生，同样我也有权不去生](/articles/cdt/381717.md)
+
 6-5 [【CDTV】立场新闻 | 留一点光，直至最后一人](/articles/cdt/381719.md)
 
 6-5 [【图说天朝】吹灭维园外烛光的香港警察](/articles/cdt/381728.md)
@@ -596,8 +600,4 @@
 5-2 [【旧闻重温】Matters | 给环卫工友们的“劳动节”的祝福：尊严、发声与消除恐惧](/articles/cdt/383053.md)
 
 5-1 [尖椒部落 | 为什么女性在零工市场里更受“青睐”？](/articles/cdt/383055.md)
-
-5-1 [【网络民议】真难相信这是国家卫健委发出来的爹味新闻](/articles/cdt/383063.md)
-
-5-1 [真实故事计划 | 大厂里的外包年轻人](/articles/cdt/383067.md)
 
