--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-6 [疫情继续抬头 广州市加大力度防控新冠疫情](/articles/voa/1040321.md)
+
+6-5 [台海危机加剧 打破权力平衡的关键是什么？](/articles/voa/1040322.md)
+
+6-5 [记者手记：酷热风沙中，民运人士纪念六四32周年](/articles/voa/1040323.md)
+
 6-5 [美两党三位参议员即将访台 与台高层讨论美台关系](/articles/voa/1040324.md)
 
 6-5 [德国官员斥责匈牙利阻挠欧盟批评中国](/articles/voa/1040325.md)
@@ -594,10 +600,4 @@
 5-22 [菲中就海洋争端举行会谈，马尼拉称会谈“友好而坦率”](/articles/voa/1040619.md)
 
 5-22 [洪都拉斯打“疫苗牌” 谁愿意给就跟谁打交道](/articles/voa/1040620.md)
-
-5-22 [台湾指责中国散播有关新冠肺炎疫情的假消息](/articles/voa/1040621.md)
-
-5-22 [中国打击加密货币采矿和交易行为加大比特币跌幅](/articles/voa/1040622.md)
-
-5-22 [尽管多次尝试美国防长至今无法与中国军方高层对话](/articles/voa/1040623.md)
 
