--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-6 [七国集团就最低全球企业税率达成协议](/articles/voa/1040317.md)
+
 6-6 [香港支联会副主席邹幸彤保释外出 批评警方企图以言入罪](/articles/voa/1040318.md)
 
 6-6 [美欧驻港领事机构点燃六四烛光 中国谴责其干预中国内政](/articles/voa/1040319.md)
@@ -598,6 +600,4 @@
 5-23 [有心征服珠峰无奈病毒挡道：新冠疫情肆虐世界屋脊](/articles/voa/1040615.md)
 
 5-23 [俄罗斯继续加紧武器装备升级 同时聚焦亚太北极](/articles/voa/1040616.md)
-
-5-22 [贫穷国家“一苗难求” 豁免疫苗专利管用吗？](/articles/voa/1040617.md)
 
