--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-6 [G7支持征收全球最低企业税  美英法财长叫好](/articles/rfi/1028530.md)
+
+6-6 [脸书：乐见G7税改有进展 自知将付较多税金](/articles/rfi/1028531.md)
+
+6-6 [中国看增33% 顺差可能扩大](/articles/rfi/1028532.md)
+
+6-6 [比利时7月启用疫苗护照       欧盟境外旅客可免隔离](/articles/rfi/1028533.md)
+
+6-6 [美国联合航空公司计划购买 15 架超音速客机](/articles/rfi/1028534.md)
+
 6-6 [澳洲泳将查默斯坦承 疫情下参加东奥让他害怕 – 法国国际广播电台 - RFI](/articles/rfi/1028535.md)
 
 6-5 [安徽安庆爆随机杀人案 已5死15伤](/articles/rfi/1028536.md)
@@ -590,14 +600,4 @@
 6-1 [法国周一起向所有成年人开放疫苗接种](/articles/rfi/1028828.md)
 
 6-1 [法德呼吁澄清有关美国对默克尔进行窃听活动的报导](/articles/rfi/1028829.md)
-
-6-1 [世界卫生大会闭幕 &quot;疫苗&quot;成为重点议题](/articles/rfi/1028830.md)
-
-6-1 [法国专家吁银发族提早选择处理遗产方式 - 今日经济](/articles/rfi/1028831.md)
-
-6-1 [法网 费德瑞轻取伊斯托明晋2轮 – 法国国际广播电台 - RFI](/articles/rfi/1028832.md)
-
-6-1 [日本政府将为台积电半导体研发拨款190亿日元](/articles/rfi/1028833.md)
-
-6-1 [获利卖压涌现 欧股收跌 – 法国国际广播电台 - RFI](/articles/rfi/1028834.md)
 
