--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 6-6 [一席 | 遭遇过乌台诗案的苏轼反复地表示要慎言避祸，但作为诗人的他还是要继续写诗](/articles/cdt/381706.md)
 
+6-6 [VOA | 记者手记：莫哈韦沙漠里的六四守夜人](/articles/cdt/381712.md)
+
 6-5 [匿名网友 | 在线众包多媒体项目《广场犹在》](/articles/cdt/381714.md)
 
 6-5 [在野登山队 | 如若我也有权生，同样我也有权不去生](/articles/cdt/381717.md)
@@ -598,6 +600,4 @@
 5-1 [【404文库】十分正经研究所 | 向印度人民道歉](/articles/cdt/383031.md)
 
 5-1 [【立此存照】中央政法委官微嘲讽印度疫情：中国点火 vs 印度点火](/articles/cdt/383048.md)
-
-5-1 [南风窗 | 你家的创维电视正在监控你](/articles/cdt/383049.md)
 
