--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-6 [缅甸政府军与村民爆发冲突，打死20人](/articles/voa/1040314.md)
+
 6-6 [联合国批评丹麦通过转移难民的新法律](/articles/voa/1040315.md)
 
 6-6 [希腊对土耳其发出警告](/articles/voa/1040316.md)
@@ -598,6 +600,4 @@
 5-23 [哈马斯举行阅兵，最高领导人再次露面](/articles/voa/1040612.md)
 
 5-23 [美泰战略对话重申对防务联盟的承诺](/articles/voa/1040613.md)
-
-5-23 [缅甸军政府：昂山素季将出庭受审](/articles/voa/1040614.md)
 
