--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 6-6 [一席 | 遭遇过乌台诗案的苏轼反复地表示要慎言避祸，但作为诗人的他还是要继续写诗](/articles/cdt/381706.md)
 
+6-6 [莫狄骁的山房 | “我们”失败了吗？](/articles/cdt/381708.md)
+
 6-6 [过桥土豆 | 科学松鼠会事件始末](/articles/cdt/381710.md)
 
 6-6 [VOA | 记者手记：莫哈韦沙漠里的六四守夜人](/articles/cdt/381712.md)
@@ -598,6 +600,4 @@
 5-2 [观人随笔 | 当“圣母”成为贬义词](/articles/cdt/383026.md)
 
 5-1 [众新闻 | 港大与学生会割席兼谴责 历年热心政事突扣“政治化”帽子](/articles/cdt/383027.md)
-
-5-1 [【404文库】十分正经研究所 | 向印度人民道歉](/articles/cdt/383031.md)
 
