--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-6 [复旦分校建案 匈牙利首都万人抗议](/articles/rfi/1028514.md)
+
+6-6 [布基纳法索屠杀案138人丧命 联合国谴责](/articles/rfi/1028515.md)
+
 6-6 [中国口罩单价因疫情欧洲疯炒近10欧 德国怒查中间贪腐](/articles/rfi/1028516.md)
 
 6-6 [法国外交部纪念六四：中国可怕镇压不该被遗忘](/articles/rfi/1028517.md)
@@ -596,8 +600,4 @@
 6-1 [晚上比赛又没观众喝采 乔帅：不好玩 – 法国国际广播电台 - RFI](/articles/rfi/1028812.md)
 
 6-1 [新冠疫情与阿根廷一样糟 巴西接办美洲杯挨轰 – 法国国际广播电台 - RFI](/articles/rfi/1028813.md)
-
-6-1 [密契尔轰30分 爵士猎灰熊季后赛首轮听牌 – 法国国际广播电台 - RFI](/articles/rfi/1028814.md)
-
-6-1 [阿根廷新冠疫情惨 美洲杯主办遭拔改巴西接手 – 法国国际广播电台 - RFI](/articles/rfi/1028815.md)
 
