--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+6-6 [全球最低税约：法国警告与中国等有艰苦一役](/articles/rfi/1028508.md)
+
+6-6 [香港首名本地变种感染母女四处走 忧染更多人 源头未明但港府拒停深圳「回港易」](/articles/rfi/1028509.md)
+
+6-6 [2架无人机现踪伊拉克美军基地上空 皆遭到击落 – 法国国际广播电台 - RFI](/articles/rfi/1028510.md)
+
+6-6 [拜登投书美媒 承诺会支持欧洲盟友抗俄 – 法国国际广播电台 - RFI](/articles/rfi/1028511.md)
+
+6-6 [美国军机抵台运送小批量疫苗疑显军事大博弈 中国网络有喊把它打下来](/articles/rfi/1028512.md)
+
+6-6 [消息人士：法国检方调查黎巴嫩央行总裁私人财产 – 法国国际广播电台 - RFI](/articles/rfi/1028513.md)
+
 6-6 [复旦分校建案 匈牙利首都万人抗议](/articles/rfi/1028514.md)
 
 6-6 [布基纳法索屠杀案138人丧命 联合国谴责](/articles/rfi/1028515.md)
@@ -588,16 +600,4 @@
 6-1 [港研「未接种疫苗者限入」 有病人团体责俨如惩罚市民削人权](/articles/rfi/1028806.md)
 
 6-1 [柬越泰入境香港要隔离21天 但「半封城」的广州「回港易」不改 续免隔离](/articles/rfi/1028807.md)
-
-6-1 [中欧投资协议冻结「困难值得重视」 王毅与欧洲四国外长认同须冷静反思](/articles/rfi/1028808.md)
-
-6-1 [76人未横扫巫师 恩比德伤退成利空 – 法国国际广播电台 - RFI](/articles/rfi/1028809.md)
-
-6-1 [质疑中印冲突共军死伤数 陆网红遭判刑诋毁烈士 – 法国国际广播电台 - RFI](/articles/rfi/1028810.md)
-
-6-1 [卫斯布鲁克大三元逆转76人 巫师季后赛扳回一城 – 法国国际广播电台 - RFI](/articles/rfi/1028811.md)
-
-6-1 [晚上比赛又没观众喝采 乔帅：不好玩 – 法国国际广播电台 - RFI](/articles/rfi/1028812.md)
-
-6-1 [新冠疫情与阿根廷一样糟 巴西接办美洲杯挨轰 – 法国国际广播电台 - RFI](/articles/rfi/1028813.md)
 
