--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-6 [匈牙利人抗议计划兴建的中国大学校园](/articles/voa/1040310.md)
+
+6-6 [美国参议员承诺为台湾提供疫苗](/articles/voa/1040311.md)
+
+6-6 [美贸易代表：美中贸易关系严重失衡](/articles/voa/1040312.md)
+
 6-6 [塑造“可信可爱可敬”的中国？品行不端岂能可爱？](/articles/voa/1040313.md)
 
 6-6 [缅甸政府军与村民爆发冲突，打死20人](/articles/voa/1040314.md)
@@ -594,10 +600,4 @@
 5-24 [在疫情导致全球动荡之时，中国最高外交官访问俄罗斯，两国乘机深化关系](/articles/voa/1040608.md)
 
 5-23 [伊朗称核查人员可能不再会获得核设施图像资料](/articles/voa/1040609.md)
-
-5-23 [女权行动者发声 批当局以爱国为名强化网络暴力](/articles/voa/1040610.md)
-
-5-23 [刚果火山喷发，居民惊恐逃离](/articles/voa/1040611.md)
-
-5-23 [哈马斯举行阅兵，最高领导人再次露面](/articles/voa/1040612.md)
 
