--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-6 [法国议会补选 闪现明年总统大选先兆 - 要闻解说](/articles/rfi/1028504.md)
+
+6-6 [美参议员达克沃丝等旋风式访台3小时宣布捐赠台湾75万剂疫苗](/articles/rfi/1028505.md)
+
+6-6 [电子人民币或将冲击美元和欧元垄断](/articles/rfi/1028506.md)
+
+6-6 [香港与墨西哥保护投资协议月中生](/articles/rfi/1028507.md)
+
 6-6 [全球最低税约：法国警告与中国等有艰苦一役](/articles/rfi/1028508.md)
 
 6-6 [香港首名本地变种感染母女四处走 忧染更多人 源头未明但港府拒停深圳「回港易」](/articles/rfi/1028509.md)
@@ -592,12 +600,4 @@
 6-1 [CF40报告：拜登政府短期内不会、也无法取消对华关税 - 今日经济](/articles/rfi/1028802.md)
 
 6-1 [日本皇室开始接种新冠疫苗](/articles/rfi/1028803.md)
-
-6-1 [普京准备到瑞士和拜登讨论人权问题](/articles/rfi/1028804.md)
-
-6-1 [德国《时代》周报：人们从中国那里什么也了解不到 - 柏林飞鸿](/articles/rfi/1028805.md)
-
-6-1 [港研「未接种疫苗者限入」 有病人团体责俨如惩罚市民削人权](/articles/rfi/1028806.md)
-
-6-1 [柬越泰入境香港要隔离21天 但「半封城」的广州「回港易」不改 续免隔离](/articles/rfi/1028807.md)
 
