--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-6 [拜登在欧洲之行前表态：要团结盟友 应对俄中](/articles/dw/1042080.md)
+
+6-6 [墙外文摘：维园，一张巨大的空椅子](/articles/dw/1042081.md)
+
 6-6 [美参议员乘军机闪电访台 捐赠75万剂疫苗](/articles/dw/1042082.md)
 
 6-6 [特朗普“重出江湖” 炮轰中国 暗示再次参选](/articles/dw/1042083.md)
@@ -596,8 +600,4 @@
 5-20 [张一鸣卸任字节跳动CEO  “为公司创造更多可能“](/articles/dw/1042378.md)
 
 5-20 [2020年美中投资创12年来新低](/articles/dw/1042379.md)
-
-5-20 [长平观察：中国“屌丝”的“内卷”与“躺平“](/articles/dw/1042380.md)
-
-5-20 [日忧中国军力超前 防长称台湾情况「我们的问题」](/articles/dw/1042381.md)
 
