--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-7 [缅甸政变强人会见中国大使及东盟高级代表讨论当前危机](/articles/voa/1040306.md)
+
+6-6 [美司法部不再寻求司法手段强制获取记者通讯记录](/articles/voa/1040307.md)
+
 6-6 [英籍香港终审法院非常任法官因国安法将离任](/articles/voa/1040308.md)
 
 6-6 [中共加紧钳制信仰自由 地方召会基督徒遭迫害](/articles/voa/1040309.md)
@@ -596,8 +600,4 @@
 5-24 [欧盟要求白俄罗斯解释飞机改道、拘留记者的问题](/articles/voa/1040604.md)
 
 5-24 [以色列-哈马斯停火持续第三天 布林肯将前往巴以地区](/articles/voa/1040605.md)
-
-5-24 [中国甘肃山地马拉松遇极端天气至少21人丧生 主办方缺乏应急预案引发公众愤怒](/articles/voa/1040606.md)
-
-5-24 [共产党时代波兰知名地下组织展览开幕 当年纲领预言已实现](/articles/voa/1040607.md)
 
