--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-7 [法国海滨仪式，纪念联军诺曼底登陆77周年](/articles/voa/1040305.md)
+
 6-7 [缅甸政变强人会见中国大使及东盟高级代表讨论当前危机](/articles/voa/1040306.md)
 
 6-6 [美司法部不再寻求司法手段强制获取记者通讯记录](/articles/voa/1040307.md)
@@ -598,6 +600,4 @@
 5-24 [美韩“洪水级”千亿投资潮或将淹没中国芯片自主路](/articles/voa/1040603.md)
 
 5-24 [欧盟要求白俄罗斯解释飞机改道、拘留记者的问题](/articles/voa/1040604.md)
-
-5-24 [以色列-哈马斯停火持续第三天 布林肯将前往巴以地区](/articles/voa/1040605.md)
 
